compiler/testData/diagnostics/tests/resolve/invoke/errors/unresolvedInvoke.kt
// !DIAGNOSTICS: -UNUSED_EXPRESSION
fun foo(i: Int) {
    <!FUNCTION_EXPECTED!>i<!>()
    <!FUNCTION_EXPECTED!>1<!>()
}